# wscpp

./: .clang-format  .clang-tidy  .gitignore  ANALYSIS.md  ANALYSIS_RUST.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile.in  LICENSE  README.md
.gigacode/plans/: websocket_implementation_plan.md  websocket_implementation_plan_atomic.md  websocket_implementation_plan_atomic_v2.md  websocket_implementation_plan_final.md  websocket_implementation_plan_v2.md  wscpp_implementation_plan.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.gitverse/: PULL_REQUEST_TEMPLATE.md
.gitverse/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  bench_common.hpp  bench_echo_server.cpp  bench_frame_parse.cpp  bench_masking.cpp  bench_net_args.hpp  bench_roundtrip.cpp  bench_roundtrip_net.cpp  bench_util.hpp  bench_wscpp_connect_server.cpp  run_benchmarks.sh  run_benchmarks_both.sh  run_remote_network.sh  run_remote_network_compare.sh
benchmarks/compare/: CMakeLists.txt  README.md  bench_beast_echo_server.cpp  bench_beast_roundtrip.cpp  bench_beast_roundtrip_net.cpp  bench_easywsclient_connect.cpp  bench_easywsclient_connect_net.cpp  bench_ixwebsocket_echo_server.cpp  bench_ixwebsocket_roundtrip.cpp  bench_ixwebsocket_roundtrip_net.cpp  bench_libwebsockets_echo_server.cpp  bench_libwebsockets_roundtrip.cpp  bench_libwebsockets_roundtrip_net.cpp  bench_sws_echo_server.cpp  bench_sws_roundtrip.cpp  bench_sws_roundtrip_net.cpp  bench_websocketpp_echo_server.cpp  bench_websocketpp_roundtrip.cpp  bench_websocketpp_roundtrip_net.cpp
cmake/: wscpp.pc.in  wscppConfig.cmake.in  wscpp_version.h.in  wscpp_warnings.cmake
docs/: DEVELOPER.md  HANDOFF.md  README.md  RUST.md  TLS.md
examples/: CMakeLists.txt  README.md
examples/client/: CMakeLists.txt  client.cpp
examples/server/: CMakeLists.txt  server.cpp
examples/tls_client/: CMakeLists.txt  client.cpp
examples/tls_server/: CMakeLists.txt  server.cpp
include/wscpp/: client.hpp  connection.hpp  error.hpp  handshake.hpp  log.hpp  server.hpp  version.hpp
include/wscpp/crypto/: ssl_context.hpp
include/wscpp/detail/: log.hpp  make_unique.hpp  mask.hpp  utf8.hpp
include/wscpp/extensions/: permessage_deflate.hpp
include/wscpp/frame/: builder.hpp  parser.hpp
include/wscpp/net/: asio_socket.hpp  io_context.hpp  linux_socket.hpp  openssl_context.hpp  stream_buffer.hpp  tcp_endpoint.hpp  tcp_socket.hpp  transport.hpp
rust/: Cargo.toml  README.md
rust/benchmarks/: run_benchmarks.sh  run_remote_network_compare.sh
rust/examples/echo_client/: Cargo.toml
rust/examples/echo_client/src/: main.rs
rust/examples/echo_server/: Cargo.toml
rust/examples/echo_server/src/: main.rs
rust/examples/tls_client/: Cargo.toml
rust/examples/tls_client/src/: main.rs
rust/examples/tls_server/: Cargo.toml
rust/examples/tls_server/src/: main.rs
rust/ws-rs/: Cargo.toml
rust/ws-rs-benches/: Cargo.toml
rust/ws-rs-benches/src/: common.rs  fastwebsockets_bench.rs  lib.rs  tokio_websockets_bench.rs  tungstenite_bench.rs
rust/ws-rs/src/: client.rs  close.rs  connection.rs  error.rs  handshake.rs  lib.rs  server.rs  transport.rs  types.rs  utf8.rs  version.rs
rust/ws-rs/src/blocking/: client.rs  connection.rs  handshake.rs  mod.rs  server.rs  tls.rs  transport.rs
rust/ws-rs/src/extensions/: mod.rs  negotiate.rs  permessage_deflate.rs
rust/ws-rs/src/frame/: builder.rs  mask.rs  mod.rs  parser.rs
rust/ws-rs/src/tls/: async_io.rs  config.rs  mod.rs
rust/ws-rs/tests/: blocking_echo.rs  blocking_tls_echo.rs  close_codes.rs  deflate_echo.rs  fragmented_echo.rs  handshake.rs  integration_echo.rs  invalid_utf8.rs  permessage_deflate.rs  ping_pong.rs  rfc6455_compliance.rs  stress.rs  throughput_echo.rs  tls_echo.rs  utf8.rs  version.rs
scripts/: bump_rust_version.sh  bump_version.sh  gen-test-tls-certs.sh
scripts/ci/: check-format.sh  check-rust.sh  clang-tidy.sh  package-release.sh
src/: CMakeLists.txt  client.cpp  connection.cpp  error.cpp  handshake.cpp  log.cpp  server.cpp  wscpp.cpp
src/crypto/: ssl_context.cpp
src/extensions/: permessage_deflate.cpp
src/frame/: builder.cpp  parser.cpp
src/net/: CMakeLists.txt  asio_socket.cpp  linux_socket.cpp  openssl_context.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_client_server.cpp  test_rfc6455_protocol.cpp  test_stress.cpp  test_tls.cpp
tests/regression/: CMakeLists.txt  test_rfc6455_compliance.cpp
tests/tls/: tls_fixtures.hpp
tests/tls/fixtures/: .gitignore
tests/unit/: CMakeLists.txt  test_asio.cpp  test_client.cpp  test_connection.cpp  test_frame.cpp  test_handshake.cpp  test_linux_socket.cpp  test_openssl.cpp  test_permessage_deflate.cpp  test_server.cpp  test_utf8.cpp  test_version.cpp
